<resources>
    <string name="app_global_preferences" translatable="false">
        com.amw188.csit321_paws_preferences
    </string>
    <string name="app_url_owm_root" translatable="false">
        https://openweathermap.org/
    </string>
    <string name="app_url_owm_weather_root" translatable="false">
        https://api.openweathermap.org/
    </string>
    <string name="app_url_owm_map_root" translatable="false">
        https://tile.openweathermap.org/map/
    </string>
    <string name="app_url_map_layer_cloud" translatable="false">clouds_new</string>
    <string name="app_url_map_layer_precip" translatable="false">precipitation_new</string>
    <string name="app_url_map_layer_pressure" translatable="false">pressure_new</string>
    <string name="app_url_map_layer_wind" translatable="false">wind_new</string>
    <string name="app_url_map_layer_temp" translatable="false">temp_new</string>
    <string name="file_survey_questions" translatable="false">paws_survey_questions</string>
    <string name="file_survey_results" translatable="false">paws_survey_results</string>
    <string name="file_facebook_results" translatable="false">paws_fb_results</string>
    <string name="noti_chan_name_unused">Unused Channel</string>
    <string name="noti_chan_name_low">Low-Priority Notifications</string>
    <string name="noti_chan_name_default">Added-Feedback Notifications</string>
    <string name="noti_chan_name_high">High-Priority Notifications</string>
    <string name="noti_chan_name_max">Imperative Notifications</string>
    <string name="noti_chan_desc_unused">paws_notification_channel</string>
    <string name="noti_chan_desc_low">paws_notification_channel</string>
    <string name="noti_chan_desc_default">paws_notification_channel</string>
    <string name="noti_chan_desc_high">paws_notification_channel</string>
    <string name="noti_chan_desc_max">paws_notification_channel</string>
    <string name="app_default_weather_notif_time_start">08:00</string>
    <string name="app_default_weather_notif_time_end">20:00</string>
    <string name="app_name" translatable="false">PAWS</string>
    <string name="app_detail">CSIT321\nPAWS\nPrivate prototype</string>
    <string name="app_notification">PAWS Notification</string>
    <string name="label_home">@string/app_name</string>
    <string name="label_maps">Mapping</string>
    <string name="label_weather">Weather</string>
    <string name="label_surveys">Profiling</string>
    <string name="label_service">PAWS Manager Services</string>
    <string name="app_btn_start">start</string>
    <string name="app_btn_submit">submit</string>
    <string name="app_btn_continue">continue</string>
    <string name="app_btn_return">return</string>
    <string name="app_btn_reset">reset profile data</string>
    <string name="app_btn_optin">opt-in</string>
    <string name="app_btn_optout">opt-out</string>
    <string name="app_btn_perm_grant">accept</string>
    <string name="app_btn_perm_deny">later</string>
    <string name="app_title_request_loc_coarse">Vague location data</string>
    <string name="app_title_request_loc_fine">Precise location data</string>
    <string name="app_title_request_internet">Internet access</string>
    <string name="app_title_request_network_state">Network conditions</string>
    <string name="app_msg_request_loc_coarse">
        Vague location tracking is needed to fetch local weather and maps data.
    </string>
    <string name="app_msg_request_loc_fine">
        Precise location tracking is used when prompted to watch for your safety.
    </string>
    <string name="app_msg_request_internet">
        Internet access is needed to gather weather data from public-access stations.
    </string>
    <string name="app_msg_request_network_state">
        Network connectivity is needed to balance GPS and WiFi usage.
    </string>
    <string name="app_txt_placeholder">placeholder</string>
    <string name="app_txt_fallback">Unable to load information at this time.</string>
    <string name="app_nav_maps">Maps</string>
    <string name="app_nav_home">Home</string>
    <string name="app_nav_weather">Weather</string>
    <string name="app_nav_return">Continue Later</string>
    <string name="app_reset_result">All profile data has been reset.</string>
    <string name="home_warning_title">Survey incomplete</string>
    <string name="home_warning_subtitle">Some personalisation features are not enabled.</string>
    <string name="home_clear_label">humidity</string>
    <string name="home_cloud_label">coverage</string>
    <string name="home_precip_label">last 3 hrs</string>
    <string name="home_weather_timestamp">Updated</string>
    <string name="home_card_surveys">Surveys</string>
    <string name="home_card_maps">Maps and Tracking</string>
    <string name="home_card_maps_subtitle_large">
        "Plan your journey ahead of time.\n"
        "Enable the tracking companion to receive updates over the course of your trip.\n"
    </string>
    <string name="home_card_maps_subtitle_small">
        "Monitor your battery levels at all times. Location services may occupy your resources.\n"
        "You may change usage settings at any time in Preferences.\n"
    </string>
    <string name="home_card_profile">Profile</string>
    <string name="home_card_settings">Settings</string>
    <string name="home_card_help">Help</string>
    <string name="home_footer">
        "SnowPAWS Prototype 2019"
    </string>
    <string name="pp_welcome">
        Welcome to the Persuasive Avalanche Warning System
    </string>
    <string name="pp_prompt">
        Continue to profiling?
    </string>
    <string name="pp_btn_decline">later</string>
    <string name="pp_btn_accept">proceed</string>
    <string name="pp_desc_1">
        "Journeys through slopes and wilderness may prove challenging even for experienced travellers and sportspeople alike.\n\n"
        "Misadventure can arise at any moment, and changing weather conditions may scatter a known trail with hazards and change the environment to better suit disaster."
    </string>
    <string name="pp_desc_2">
        "This companion suite is designed to help plan your journeys ahead of time with an all-in-one set of weather and mapping tools to help you visualise adverse weather conditions before they strike.\n\n"
        "Use the Drawing tool to demarcate areas of elevated risk before your expedition, and the system will notify you accordingly should you stray into them."
    </string>
    <string name="pp_desc_3">
        "Our system is based on cooperation between itself and the user: your honesty in profiling determines the effectiveness and accuracy of our knowledge system, and can help us best support you while you request it.\n\n"
        "Please complete the survey resources truthfully, as the safety of yourself and your companions may depend on it."
    </string>
    <string name="pm_title">Personalisation Hub</string>
    <string name="pm_subtitle">System setup and calibration</string>
    <string name="pm_btn_selfanalysis">self-analysis</string>
    <string name="pm_btn_survey">survey</string>
    <string name="pm_btn_facebook">facebook</string>
    <string name="pm_card_selfanalysis">
        "Answer two questions to quickly begin using PAWS"
    </string>
    <string name="pm_card_survey">
        "Complete a short survey to identify your personality type"
    </string>
    <string name="pm_card_facebook">
        "Use Facebook integration to weight results with your profile"
    </string>
    <string name="sa_title">Self-Analysis</string>
    <string name="sa_subtitle">Two-point quick-start form</string>
    <string name="sa_risk_question">
        Which of these personal profiles would you say best describes your day-to-day self?
    </string>
    <string name="sa_risk_low">
        Introverted
        Headstrong
        Amateur
    </string>
    <string name="sa_risk_med">
        Equivocal
        Adventurous
        Adept
    </string>
    <string name="sa_risk_high">
        Extraverted
        Cautious
        Experienced
    </string>
    <string name="sa_updates_question">
        Which of these situations is best suited to your preferences for notifications?
    </string>
    <string name="sa_updates_low">
        Any adverse and inclement weather
    </string>
    <string name="sa_updates_med">
        Dangerous conditions relevant to me
    </string>
    <string name="sa_updates_high">
        Imminent threat to my personal safety or life
    </string>
    <string name="se_title">Survey home</string>
    <string name="se_subtitle">Mini-IPIP personality survey</string>
    <string name="se_in_progress">Survey not yet complete.</string>
    <string name="se_results_label">last completed survey</string>
    <string name="se_fallback">No existing profile found.</string>
    <string name="sq_title">Question</string>
    <string name="sq_subtitle">@string/se_subtitle</string>
    <string name="sq_answer">I feel this statement is:</string>
    <string name="sq_answer1">Very accurate</string>
    <string name="sq_answer2">Accurate</string>
    <string name="sq_answer3">Quite accurate</string>
    <string name="sq_answer4">Neither accurate\nnor inaccurate</string>
    <string name="sq_answer5">Quite inaccurate</string>
    <string name="sq_answer6">Inaccurate</string>
    <string name="sq_answer7">Very inaccurate</string>
    <string name="sc_title">
        Personalisation complete
    </string>
    <string name="sc_description">
        Your results have been recorded, and will be considered in this system\'s decision-making.\n\n

        You may review your results from the Profiles page, or from any of the analysis entry pages.
    </string>
    <string name="fe_title">Facebook profiling</string>
    <string name="fe_subtitle">Apply Magic Sauce integration</string>
    <string name="fe_caption">Facebook integration</string>
    <string name="fe_button">Log in using Facebook</string>
    <string name="fe_disclaimer">
        PAWS Facebook Integration will require permission to access your likes.
    </string>
    <string name="fe_fallback">No existing profile found.</string>
    <string name="wa_today">Today</string>
    <string name="wa_weekly">Forecast</string>
    <string name="wa_sunrise">Sunrise</string>
    <string name="wa_sunset">Sunset</string>
    <string name="ma_wind">Wind</string>
    <string name="ma_precip">Precipitation</string>
    <string name="ma_risk">Drawings</string>
    <string name="ma_tracking_enable">Start tracking my journey</string>
    <string name="ma_tracking_disable">End tracking</string>
    <string name="ma_search_hint">Search</string>
    <string name="ma_map_type">Map Type</string>
    <string name="ma_default">Default</string>
    <string name="ma_satellite">Satellite</string>
    <string name="ma_terrain">Terrain</string>
    <string name="ma_location_usage_disabled">
        "Location usage is currently disabled.\n"
        "You may change this in Preferences."
    </string>
    <string name="sv_fa_service_unavailable">The service encountered a critical error.</string>
    <string name="sv_fa_invalid_lat_lng">An invalid lat/long value pair was provided.</string>
    <string name="sv_fa_no_address">No address was found for the given coordinates.</string>
    <string name="sv_fa_geocoder_unavailable">The service geocoder was unavailable.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_heading_general">General</string>
    <string name="pref_heading_usage">Data and Battery Usage</string>
    <string name="pref_heading_notifications">Notifications</string>
    <string name="pref_title_units">Units of measurement</string>
    <string name="pref_title_time">Time format</string>
    <string name="pref_title_time_start">Don\'t send notifications earlier than:</string>
    <string name="pref_title_time_end">Don\'t send notifcations later than:</string>
</resources>