<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".SelfAnalysisActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/laySurveyEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/height_navbars"
            android:clipChildren="false"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="2dp">

            <!-- Header Banner. -->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHeader"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_banners_static"
                app:cardElevation="@dimen/elevation_banners">

                <LinearLayout
                    android:id="@+id/layHeader"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_icon_huge"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/app_spacing"
                        android:layout_marginEnd="@dimen/app_spacing"
                        android:adjustViewBounds="true"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/logo" />

                    <LinearLayout
                        android:id="@+id/layHeaderRight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/sa_title"
                            android:textAppearance="@style/TextAppearance.Paws.Title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/sa_subtitle"
                            android:textAppearance="@style/TextAppearance.Paws.Caption" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Two-Point Quick-Start Container. -->

            <LinearLayout
                android:id="@+id/laySurveyEntryBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/app_spacing"
                android:clipChildren="false"
                android:orientation="vertical" >

                <!-- Risk Self-Analysis Container. -->

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/app_spacing">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/app_padding" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/text_spacing"
                            android:paddingLeft="@dimen/text_spacing"
                            android:paddingRight="@dimen/text_spacing"
                            android:scrollHorizontally="true"
                            android:maxLines="3"
                            android:text="@string/sa_risk_question"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Paws.Medium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnRiskLow"
                                style="@style/Widget.Paws.Button.TextButton.Block"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_buttons_block"
                                android:layout_weight="1"
                                android:backgroundTint="@color/color_card"
                                android:text="@string/sa_risk_low"
                                android:textAppearance="@style/TextAppearance.Paws.Button.Block"
                                android:textColor="@color/color_on_background"
                                app:strokeColor="@color/color_on_background"
                                app:strokeWidth="@dimen/width_stroke" />

                            <View
                                android:layout_width="@dimen/app_spacing_half"
                                android:layout_height="match_parent" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnRiskMed"
                                style="@style/Widget.Paws.Button.TextButton.Block"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_buttons_block"
                                android:layout_weight="1"
                                android:backgroundTint="@color/color_card"
                                android:text="@string/sa_risk_med"
                                android:textAppearance="@style/TextAppearance.Paws.Button.Block"
                                android:textColor="@color/color_on_background"
                                app:strokeColor="@color/color_on_background"
                                app:strokeWidth="@dimen/width_stroke" />

                            <View
                                android:layout_width="@dimen/app_spacing_half"
                                android:layout_height="match_parent" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnRiskHigh"
                                style="@style/Widget.Paws.Button.TextButton.Block"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_buttons_block"
                                android:layout_weight="1"
                                android:backgroundTint="@color/color_card"
                                android:text="@string/sa_risk_high"
                                android:textAppearance="@style/TextAppearance.Paws.Button.Block"
                                android:textColor="@color/color_on_background"
                                app:strokeColor="@color/color_on_background"
                                app:strokeWidth="@dimen/width_stroke" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- Update Frequency Picker Container. -->

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/app_padding"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/app_spacing_half"
                            android:paddingLeft="@dimen/text_spacing"
                            android:paddingRight="@dimen/text_spacing"
                            android:text="@string/sa_updates_question"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Paws.Medium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnUpdatesLow"
                                style="@style/Widget.Paws.Button.TextButton.Block"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_buttons_block"
                                android:layout_weight="1"
                                android:backgroundTint="@color/color_card"
                                android:text="@string/sa_updates_low"
                                android:textAppearance="@style/TextAppearance.Paws.Button.Block"
                                android:textColor="@color/color_on_background"
                                app:strokeColor="@color/color_on_background"
                                app:strokeWidth="@dimen/width_stroke" />

                            <View
                                android:layout_width="@dimen/app_spacing_half"
                                android:layout_height="match_parent" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnUpdatesMed"
                                style="@style/Widget.Paws.Button.TextButton.Block"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_buttons_block"
                                android:layout_weight="1"
                                android:backgroundTint="@color/color_card"
                                android:text="@string/sa_updates_med"
                                android:textAppearance="@style/TextAppearance.Paws.Button.Block"
                                android:textColor="@color/color_on_background"
                                app:strokeColor="@color/color_on_background"
                                app:strokeWidth="@dimen/width_stroke" />

                            <View
                                android:layout_width="@dimen/app_spacing_half"
                                android:layout_height="match_parent" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnUpdatesHigh"
                                style="@style/Widget.Paws.Button.TextButton.Block"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_buttons_block"
                                android:layout_weight="1"
                                android:backgroundTint="@color/color_card"
                                android:text="@string/sa_updates_high"
                                android:textAppearance="@style/TextAppearance.Paws.Button.Block"
                                android:textColor="@color/color_on_background"
                                app:strokeColor="@color/color_on_background"
                                app:strokeWidth="@dimen/width_stroke" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/app_gutter"
                    android:layout_marginTop="@dimen/app_spacing_half"
                    android:layout_marginEnd="@dimen/app_gutter"
                    android:orientation="horizontal">

                    <!-- Opt-Out Button. -->

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOptOut"
                        style="@style/Widget.Paws.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_buttons_small"
                        android:layout_weight="1"
                        android:text="@string/app_btn_optout"
                        android:textColor="@color/color_midtone" />

                    <!-- Contextual Submit Button. -->

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSubmit"
                        style="@style/Widget.Paws.Button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_buttons_small"
                        android:layout_weight="1"
                        android:text="@string/app_btn_submit"
                        tools:enabled="false" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        style="@style/Widget.Paws.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_navbars"
        android:layout_gravity="bottom"
        android:background="@color/color_primary"
        app:itemIconTint="@color/bottom_navigation_colors"
        app:itemTextColor="@color/bottom_navigation_colors"
        app:menu="@menu/bottom_navigation_menu" />

</FrameLayout>