<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ProfilingMenuActivity">

    <LinearLayout
        android:id="@+id/layProfilingMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/height_navbars"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardInfo"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginLeft="@dimen/app_gutter"
            android:layout_marginTop="@dimen/app_spacing"
            android:layout_marginRight="@dimen/app_gutter">

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/app_padding"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Paws.Small" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/app_gutter"
            android:layout_marginTop="@dimen/app_spacing"
            android:layout_marginRight="@dimen/app_gutter"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Paws.Small">

            <LinearLayout
                android:id="@+id/layButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_gutter"
                android:layout_marginTop="@dimen/app_spacing"
                android:layout_marginRight="@dimen/app_gutter"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSurveys"
                    style="@style/Widget.Paws.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_buttons_small"
                    android:text="@string/pm_btn_survey" />

                <TextView
                    android:id="@+id/txtSurvey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/app_padding"
                    android:text="@string/pm_card_survey"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Paws.Small" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFacebook"
                    style="@style/Widget.Paws.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_buttons_small"
                    android:text="@string/pm_btn_facebook" />

                <TextView
                    android:id="@+id/txtFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/app_padding"
                    android:text="@string/pm_card_facebook"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Paws.Small" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        style="@style/Widget.Paws.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_navbars"
        android:layout_gravity="bottom"
        android:background="@color/color_primary"
        app:itemIconTint="@color/bottom_navigation_colors"
        app:itemTextColor="@color/bottom_navigation_colors"
        app:menu="@menu/bottom_navigation_menu" />

</FrameLayout>